# context-windows-lab

./: LICENSE  README.md  env.example  gitignore  pyproject.toml  run_hard_experiments_v2.py
docs/: PRD.md
notebooks/: experiments.ipynb  final_analysis.ipynb
outputs_hard/: context_engineering_results.json  context_size_impact_results.json  needle_in_haystack_results.json  rag_impact_results.json
src/context_windows_lab/: __init__.py  cli.py  config.py
src/context_windows_lab/experiments/: __init__.py  base.py  context_engineering.py  context_size.py  needle_haystack.py  rag_impact.py
src/context_windows_lab/utils/: __init__.py  document_generator.py  llm_client.py  statistics.py  token_counter.py  visualization.py
tests/: __init__.py  test_unit.py
